<?xml version="1.0"?>
<package format="2">
  <name>slambot_description</name>
  <version>1.2.0</version>
  <description>
    3D models of the slambot for simulation and visualization
  </description>
  <license>BSD</license>
  <maintainer email="Bafenijn@gmail.com">Bram Fenijn</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
